# MatrosovDima

./: CMakeLists.txt  README.md  sonar-project.properties
1 sem/lab8test/: ff.c  ff.h  main.c
lab1,1/lab1,1/: lab1,1.cpp  lab1,1.vcxproj  lab1,1.vcxproj.filters
lab1.2/: lab1.2.sln
lab1.2/lab1.2/: lab1.2.cpp
lab1.3/: lab1.3.1.vcxproj  lab1.3.cpp
lab1.3/Debug/: lab1.3.1.exe.recipe  lab1.3.1.ilk  vc142.idb
lab1.4/: lab1.4.vcxproj
lab1.4/Debug/: lab1.4.ilk  vc142.idb
lab2.1/: lab2.1.vcxproj
lab2.1/Debug/: lab2.1.exe.recipe  lab2.1.ilk  lab2.1.vcxproj.FileListAbsolute.txt  vc142.idb
lab2.2/: lab2.2.vcxproj.filters
lab2.2/Debug/: lab2.2.ilk  vc142.idb
lab2.3/: lab2.3.1.vcxproj.filters  lab2.3.cpp
lab2.3/Debug/: lab2.3.1.ilk  vc142.idb
lab3.1/: lab3.1.cpp
lab3.1/Debug/: lab3.1.exe.recipe  lab3.1.ilk  lab3.1.vcxproj.FileListAbsolute.txt  vc142.idb
lab3.2/: lab3.2.cpp  lab3.2.sln  lab3.2.vcxproj
lab3.2/Debug/: lab3.2.ilk  lab3.2.vcxproj.FileListAbsolute.txt  vc142.idb
lab3.3/: lab3.3.c  lab3.3.sln  lab3.3.vcxproj
lab3.3/Debug/: lab3.3.exe.recipe  lab3.3.vcxproj.FileListAbsolute.txt
lab4/lab4.1/: Source.c  lab4.1.c
lab4/lab4.2/: lab4.2.c  lab4.2.sln  lab4.2.vcxproj
lab4/lab4.3/: lab4.3.c  lab4.3.sln  lab4.3.vcxproj.filters
lab5/Clion la5.3/: CMakeLists.txt  Functions.cpp  Functions.h  main.cpp
lab5/lab5.2/: CMakeLists.txt  Header.h  ff.cpp
lab5/lionlab5.1/: hed.h  main.cpp
lab6/lab6.1/: CMakeLists.txt  ff.cpp  hed.h  main.cpp
lab6/lab6.2/: ff.cpp  hed.h  main.cpp
lab7,8/: cd.docx
lab7,8/lab7.1/: ff.cpp  input.cpp
(+252 files in other folders)
